--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -51,19 +51,19 @@ layout: post
 
 - **Who must file**
 
-## Filing; Gen. Taxpayers Table
+## 1-1: Filing Requirements Table
 
 |Table 1-1, Gen. Filing |
 |:-:|
 |![Table 1-1](/irs.ea/assets/images/images.pub.17/table.1.1.png)|
 
-## Filing; Dependents Table 
+## 1-2: Dependents Table 
 
 |Table 1-2, Filing with Dependents |
 |:-:|
 |![Table 1-2](/irs.ea/assets/images/images.pub.17/table.1.2.png)|
 
-## Other Situations to File Table
+## 1-3: Other Situations Table
 
 |Table 1-3, Other Situations to File |
 |:-:|
@@ -558,23 +558,43 @@ Your accounting method is how you record income and expenses. Most people use ei
 
  <button onclick="buttonPubs()">Open: irs-pubs</button> 
  
-- **Pub. 505** - Tax W/H & Estimated Tax
-- **Pub. 501** - Dependents, Standard Deduction
-- **Pub. 531** - Tip Income
-- **Pub. 225** - Farmer’s Tax Guide
-- **Pub. 519** - Tax Guide for Aliens
-- **Pub. 555** - Community Property
-- **Pub. 590** - Distributions from IRAs
-- **Pub. 966** - Electronic Federal Tax Payment System (EFTPS)
-- **Pub. 5250** - Pay by Cash
+TOTAL
+- **Pub. 5**: Your Appeal Rights and How to Prepare a Protest if You Don't Agree
+- **Pub. 225**: Farmer’s Tax Guide
+- **Pub. 463**: Travel, Gift, and Car Expenses
+- **Pub. 501**: Dependents, Standard Deduction
+- **Pub. 502**: Medical and Dental Expenses
+- **Pub. 503**: Child and Dependent Care Expenses
+- **Pub. 504**: Divorced or Separated Individuals
+- **Pub. 505**: Tax Withholding and Estimated Tax
+- **Pub. 519**: Tax Guide for Aliens
+- **Pub. 523**: Selling Your Home
+- **Pub. 524**: Credit for the Elderly or the Disabled
+- **Pub. 526**: Charitable Contributions
+- **Pub. 527**: Residential Rental Property (Including Rental of Vacation Homes)
+- **Pub. 531**: Reporting Tip Income
+- **Pub. 534**: Depreciating Property Placed in Service Before 1987
+- **Pub. 535**: Business Expenses
+- **Pub. 547**: Casualties, Disasters, and Thefts
+- **Pub. 551**: Basis of Assets
+- **Pub. 555**: Community Property
+- **Pub. 556**: Examination of Returns, Appeal Rights, and Claims for Refund
+- **Pub. 561**: Determining the Value of Donated Property
+- **Pub. 570**: Tax Guide for Individuals With Income from U.S. Possessions
+- **Pub. 575**: Pension and Annuity Income
+- **Pub. 590-A**: Contributions to Individual Retirement Arrangements (IRAs)
+- **Pub. 590-B**: Distributions from Individual Retirement Arrangements (IRAs)
+- **Pub. 596**: Earned Income Credit (EIC)
+- **Pub. 936**: Home Mortgage Interest Deduction
+- **Pub. 966**: Electronic Federal Tax Payment System (EFTPS)
+- **Pub. 970**: Tax Benefits for Education
+- **Pub. 971**: Innocent Spouse Relief
+- **Pub. 1546**: The Taxpayer Advocate Service is Your Voice at the IRS
+- **Pub. 4134**: Low Income Taxpayer Clinic List
+- **Pub. 5250**: Pay by Cash
+
 - **Form W-4** - Employee’s W/H Certificate
 - **Form W-4V** - Voluntary W/H Request
 - **Form 1040-ES** - Estimated Tax for Individuals
-- **Form 8822** - Change of Address
 - **Form 2210** - Underpayment of Estimated Tax by Individuals, Estates, & Trusts
-Publication 590-B
-Cat. No. 66303U
-Distributions
-from Individual
-Retirement
-Arrangements
+- **Form 8822** - Change of Address
