--- a/drafts/3-pub17.1-1.md
+++ b/drafts/3-pub17.1-1.md
@@ -19,12 +19,10 @@ layout: post
 ## 1: Do I Have to File a Return?
 
 1. **Steps for Preparing**
-   - Gathering records, forms, and schedules
+   - Gathering records (Form W-2 and 1099), forms, and schedules
    - Filling in, checking, and signing the return
-2. **Substitute Tax Forms**
-   - Use of substitute forms that meet IRS requirements
-3. **Form W-2 and 1099**
-   - Importance of these forms for reporting wages and other income
+2. **Form W-2 and 1099**
+   - Important for reporting wages and other income
 
 
 - Factors determining whether you must file: **gross income, filing status, and age**
@@ -37,7 +35,6 @@ layout: post
 - **Questions**
 
 1. What are the new lines added to Schedule 3 for the 2023 tax year?
-2. When is the due date for filing the 2023 tax return for residents of Maine or Massachusetts?
 3. What is the penalty for filing a frivolous tax return?
 
 1. What three factors determine whether you must file a tax return?
@@ -62,7 +59,7 @@ layout: post
 ### Dependents
 
 - Responsibility of parent - child must file for their income or parent must file for them
-- Child's earnings - child earnings are not incorporated into gaurdian taxes -  See Instructions for Form 8814
+- Child's earnings - child earnings are not incorporated into guardian taxes -  See Instructions for Form 8814
 
 ### Children Under Age 19 or Full-Time Students
 
@@ -115,12 +112,6 @@ You are self-employed if you:
 3. What is the purpose of Form 8453?
    - To submit additional forms or documents that cannot be e-filed.
 
-
-## 2: How to File Electronically
-
-Free Ways To e-file: [](p17.table1-4.png)
-
-Table 1-2. 2023 Filing Requirements for Dependents
 
 
 **Requirements for an electronic return**
@@ -184,12 +175,6 @@ be filed, Attach the POA to Form 8453.
 
 - Free File Fillable Forms are available for those whose income exceeds the threshold.
 
-2. **Volunteer Income Tax Assistance (VITA)**
-
-- VITA offers free tax help to low-income taxpayers, persons with disabilities, and those with limited English proficiency.
-
-- The Tax Counseling for the Elderly (TCE) program specializes in tax issues related to pensions and retirement.
-
 **3 Questions**
 
 1. Who is eligible for Free File services?
@@ -205,18 +190,6 @@ be filed, Attach the POA to Form 8453.
 - Pensions and retirement-related tax issues.
 
 ## 4: When, How, and Where to File Your Return
-
-1. **Filing Deadlines**
-
-- The due date for most taxpayers is April 15, 2024. Extensions are available, including automatic extensions for certain groups.
-
-2. **Methods of Filing**
-
-- Returns can be filed electronically or by mail. Electronic returns must be transmitted by the due date.
-
-3. **Private Delivery Services**
-
-- Certain delivery services are approved by the IRS for mailing tax returns, with guidelines provided for proof of mailing.
 
 **3 Questions**
 
@@ -262,8 +235,6 @@ be filed, Attach the POA to Form 8453.
 - Taxpayers should keep records that support income, deductions, and credits claimed on their tax returns.
 
 2. **Duration for Keeping Records**
-
-- Typically, records should be kept for at least three years from the date the return was filed. Some situations may require longer retention.
 
 **3 Questions**
 
