--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -31,7 +31,7 @@ layout: post
 
 # Chapter 1. Filing Information
 
-## 1.1 New for 2023, Reminders & Introduction
+## New for 2023, Reminders & Introduction
 
 - Child tax credit **-->** 1,600 for each qualifying child  
 
@@ -403,13 +403,23 @@ layout: post
 <script> function buttontec() { window.open("www.IRS.govTCE"); } </script>
 
 - Free Help With Your Return  
- **: **Volunteer Income Tax Assistance, VITA** <button onclick="buttonvita()">See: VITA Info</button>  
-   **: IRS.gov/VITA   
-   **: download the *free IRS2Go app,  
-   **: call *800-906-9887* to find the nearest VITA location  
+  - **Volunteer Income Tax Assistance, VITA** <button onclick="buttonvita()">See: VITA Info</button>  
+  - VITA offers free tax help to low-income taxpayers, persons with disabilities, and those with limited English proficiency.
+  - IRS.gov/VITA   
+  - download the *free IRS2Go app,  
+  - call *800-906-9887* to find the nearest VITA location  
+
 <br>
- **: **Tax Counseling for the Elderly, TCE** <button onclick="buttonvtec()">See: TCE Info</button>  
-   **: IRS.gov/TCE, *etc*. to find the nearest TCE location  
+- **Tax Counseling for the Elderly, TCE** <button onclick="buttonvtec()">See: TCE Info</button>  
+  - The Tax Counseling for the Elderly (TCE) program specializes in tax issues related to pensions and retirement.
+  - IRS.gov/TCE, *etc*. to find the nearest TCE location  
+
+
+
+
+
+
+
 
 - When Using a Tax Professional  (ADD MORE??)  
 
