--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -38,10 +38,10 @@ layout: post
 <hr class="red">
 
 1. Clean vehicle credit (New): 
- **: Use Form 8936 & and Schedule A (Form 8936) & 1040-Schedule 3, line 6f:  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+  -  Use Form 8936 & and Schedule A (Form 8936) & 1040-Schedule 3, line 6f:  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 2. Previously owned clean vehicle credit: 
- **: Use Form 8936, credit is available for previously owned clean vehicles
+  -  Use Form 8936, credit is available for previously owned clean vehicles
 
 3. See IRS Video [Inflation Reduction Act: New and Used Clean Vehicles](https://www.youtube.com/watch?v=DtYufJmdm1A)
 
@@ -88,40 +88,40 @@ layout: post
 <hr class="red">
 
 - Credits for qualified sick and family leave wages: 
- **: Use 1040 Schedule H & Schedule 3, line 13z
+  -  Use 1040 Schedule H & Schedule 3, line 13z
 
 - Alternative motor vehicle credit **-->** Expired
 
 - Self-employed health insurance deduction:  <button onclick="buttonPubs()">Open: irs-pubs</button> 
- **: Use Form 7206, Self-Employed Health Insurance Deduction  
- **: report on 1040 Schedule 1, line 17 
+  -  Use Form 7206, Self-Employed Health Insurance Deduction  
+  -  report on 1040 Schedule 1, line 17 
 
 - 1X Charitable distribution: 2023 **-->** distribute < 50K from IRA
 
 <hr class="red">
 
 - Increase required minimum distribution age **-->** 72yr  <button onclick="buttonPubs()">Open: irs-pubs</button> 
- **: Use Pub. 590–B, Distributions from Individual Retirement Arrangements (IRAs) 
+  -  Use Pub. 590–B, Distributions from Individual Retirement Arrangements (IRAs) 
 
 <hr class="red">
 
 - 2023 IRA contribution limit increased to:
- **: The **IRA contributions limit is $6,500**. 
- **: If you're **50 or older, the limit is $7,500**. 
-   **: Before 2023, *Was 6,000 and 7,000*.
+  -  The **IRA contributions limit is $6,500**. 
+  -  If you're **50 or older, the limit is $7,500**. 
+    -  Before 2023, *Was 6,000 and 7,000*.
 
 <hr class="red">
 
 - In 2023, if you're in a 401(k), 403(b), or the federal Thrift Savings Plan, THEN you can now contribute up to **$22,500 per year**. If you're **50 or older, the limit is $30,000**. 
- **: This also applies to most 457 plans. 
+  -  This also applies to most 457 plans. 
 
 - Insurance premiums for retired public safety officers: can now exclude **3 K** from income
 
 - There are exceptions to the 10% extra tax for taking money out of a retirement plan early. These exceptions include:
- **: Distributions related to federally declared disasters.
- **: Distributions made to someone who is terminally ill.
- **: Distributions to firefighters who are either 50 years old or have 25 years of service under their plan.
- **: See: **Form 5329 and Publication 590-B**. <button onclick="buttonPubs()">Open: irs-pubs</button> 
+  -  Distributions related to federally declared disasters.
+  -  Distributions made to someone who is terminally ill.
+  -  Distributions to firefighters who are either 50 years old or have 25 years of service under their plan.
+  -  See: **Form 5329 and Publication 590-B**. <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 - See: `www.irs.gov/directfile`
 
@@ -129,12 +129,12 @@ layout: post
 
 - Temp. allowance of 100% business meal deduction: **Expired**, section 210.
 
-- Diaster tax relief**: See Disaster-Related Relief in Pub. 590-B  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+- Diaster tax relief -  See Disaster-Related Relief in Pub. 590-B  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 - Distributions to terminally ill individuals. The exception to the 10% additional tax for early distributions is expanded to distributions made after 12/29/2022, to a certified individual. See Pub. 590-B  
 
 - Starting 12/29/2022, the 10% additional tax on early IRA distributions won't apply to income from a *corrective distribution*, as long as the correction is made by the tax return due date (including extensions).
- **: Follow up?
+  -  Follow up?
 
 - The IRS cannot issue refunds before mid-February 2024 for returns that claim Additional child tax credit (ACTC).
 
@@ -149,11 +149,11 @@ layout: post
 <hr class="red">
 
 - In 2023, if you're covered by a retirement plan at work, your ability to deduct contributions to a traditional IRA is reduced if your modified adjusted gross income (AGI) is:
- **: Between 116,000 and 136,000 for married couples filing jointly or qualifying surviving spouses.
- **: Between 73,000 and 83,000 for single individuals or heads of household.
- **: Less than $10,000 for married individuals filing separately.
- **: If your spouse is covered by a retirement plan at work but you aren’t, your deduction is reduced if your modified AGI is between 218,000 and 228,000. If it's 228,000 or more, you can't deduct contributions to a traditional IRA.
- **: For more information, see Chapter 9, How Much Can You Deduct.
+  -  Between 116,000 and 136,000 for married couples filing jointly or qualifying surviving spouses.
+  -  Between 73,000 and 83,000 for single individuals or heads of household.
+  -  Less than $10,000 for married individuals filing separately.
+  -  If your spouse is covered by a retirement plan at work but you aren’t, your deduction is reduced if your modified AGI is between 218,000 and 228,000. If it's 228,000 or more, you can't deduct contributions to a traditional IRA.
+  -  For more information, see Chapter 9, How Much Can You Deduct.
 
 |Married filing jointly,<br>Qualifying surviving spouse|Single,<br>Head of household|Married filing separately
 |-|-|-|
@@ -174,24 +174,24 @@ layout: post
 
 - In 2023, your ability to contribute to a Roth IRA is reduced in these cases:
 
- **: If you're married filing jointly or a qualifying surviving spouse, your contributions are reduced if your modified AGI is $218,000 or more. You can't contribute if your AGI is 228,000 or more.
- **: If you're single, head of household, or married filing separately (and didn't live with your spouse in 2023), contributions are reduced if your modified AGI is 138,000 or more. You can't contribute if your AGI is 153,000 or more.
- **: If you're married filing separately and lived with your spouse during the year, your ability to contribute is reduced if your modified AGI is more than 0. You can't contribute if your AGI is 10,000 or more.
- **: See Chapter 9, *Can You Contribute to a Roth IRA*.
+  -  If you're married filing jointly or a qualifying surviving spouse, your contributions are reduced if your modified AGI is $218,000 or more. You can't contribute if your AGI is 228,000 or more.
+  -  If you're single, head of household, or married filing separately (and didn't live with your spouse in 2023), contributions are reduced if your modified AGI is 138,000 or more. You can't contribute if your AGI is 153,000 or more.
+  -  If you're married filing separately and lived with your spouse during the year, your ability to contribute is reduced if your modified AGI is more than 0. You can't contribute if your AGI is 10,000 or more.
+  -  See Chapter 9, *Can You Contribute to a Roth IRA*.
 
 <hr class="red">
 
-- **1099-K**: 1099-K is issued by third parties (like Uber, Lyft, Etsy, etc) to report payment transactions made to you for goods and services. You must report all income on your tax return unless excluded by law, whether you received the income electronically or not, and whether you received a Form 1099-K or not. The **box 1a** and other amounts reported on Form 1099-K are additional pieces of information to help determine the correct amounts to report on your return.
+- **1099-K -  1099-K is issued by third parties (like Uber, Lyft, Etsy, etc) to report payment transactions made to you for goods and services. You must report all income on your tax return unless excluded by law, whether you received the income electronically or not, and whether you received a Form 1099-K or not. The **box 1a** and other amounts reported on Form 1099-K are additional pieces of information to help determine the correct amounts to report on your return.
 
- **: If you received a Form 1099-K that shows payments you didn’t receive or is otherwise incorrect, **contact the Form 1099-K issuer**, not the IRS. 
- **: If you can’t get it corrected, or you sold a personal item at a loss, see the instructions for **Schedule 1, lines 8z and 24z**, see reporting information & `www.irs.gov/1099k`.
+  -  If you received a Form 1099-K that shows payments you didn’t receive or is otherwise incorrect, **contact the Form 1099-K issuer**, not the IRS. 
+  -  If you can’t get it corrected, or you sold a personal item at a loss, see the instructions for **Schedule 1, lines 8z and 24z**, see reporting information & `www.irs.gov/1099k`.
 
 <hr class="red">
 
 - **Do I Have To File A Return?**
 
 
-> **NOTE**: US and Puerto Rican residents must file even if you don't owe tax.  
+> **NOTE -  US and Puerto Rican residents must file even if you don't owe tax.  
 {: .block-tip }
 
 - **Three determining factors for filing**
@@ -251,7 +251,7 @@ layout: post
 <hr class="red">
 
 - Doesn't have & isn't eligible to get a social security number, **Use/file Form W-7**  <button onclick="buttonPubs()">Open: irs-pubs</button> 
- **: `www.irs.gov/itin`: Individual taxpayer identification number (ITIN) renewal
+  -  `www.irs.gov/itin`: Individual taxpayer identification number (ITIN) renewal
 
 <hr class="red">
 
@@ -334,8 +334,8 @@ layout: post
 
 - Are a **sole proprietor**, An **independent contractor**, **member of a partnership**, or anything else.
 - Must file Form 1040 or 1040-SR OR **Schedule SE (Form 1040), Self-Employment Tax** IFF:
- **: $\gt$ $400 from self-employment (excluding church employee income) or
- **: Church employee income $\gt$ $108.28
+  -  $\gt$ $400 from self-employment (excluding church employee income) or
+  -  Church employee income $\gt$ $108.28
 - See Table 1-3
 
 <hr class="red">
@@ -351,7 +351,7 @@ layout: post
 <hr class="red">
 
 - Aliens: Pub. 519, *Tax Guide for Aliens*  <button onclick="buttonPubs()">Open: irs-pubs</button> 
- **: See also 1040-NR, Nonresident Alien Income Tax Return
+  -  See also 1040-NR, Nonresident Alien Income Tax Return
 
 |Resident alien|Nonresident alien|Dual-status taxpayer|
 |-|-|-|
@@ -360,43 +360,43 @@ layout: post
 <hr class="red">
 
 - 1.9 Who Should File: See Pub. 596, 970, 974  <button onclick="buttonPubs()">Open: irs-pubs</button> 
- **: Even if you don't have to file, you should to get your money back if:
- **: Had tax W/H or Est. your tax or any tax credit
- **: To Qualify for Earned income credit, Use Pub. 596
- **: For Premium tax credit, Use Pub. 974
- **: For American opportunity credit, Use Pub. 970
+  -  Even if you don't have to file, you should to get your money back if:
+  -  Had tax W/H or Est. your tax or any tax credit
+  -  To Qualify for Earned income credit, Use Pub. 596
+  -  For Premium tax credit, Use Pub. 974
+  -  For American opportunity credit, Use Pub. 970
 
 <hr class="red">
 
 - Three basic Filings: *1040 & 1040-SR & 1040-NR* 
- **: SR = for seniors, 
- **: NR = Non-residents
+  -  SR = for seniors, 
+  -  NR = Non-residents
 
 <hr class="red">
 
- **: Self-Select PIN, See:
-   **: 
+  -  Self-Select PIN, See:
+    -  
 
- **: Practitioner PIN  
-   **: allows one to authorize your tax practitioner to enter or generate your PIN. Your electronic return is considered a valid only when it **includes your PIN; last name; date of birth; and IP PIN**  
-   **: If filing jointly one needs ALL Spouse info.  
+  -  Practitioner PIN  
+    -  allows one to authorize your tax practitioner to enter or generate your PIN. Your electronic return is considered a valid only when it **includes your PIN; last name; date of birth; and IP PIN**  
+    -  If filing jointly one needs ALL Spouse info.  
 
- **: Form 8453  <button onclick="buttonPubs()">Open: irs-pubs</button>  
+  -  Form 8453  <button onclick="buttonPubs()">Open: irs-pubs</button>  
 
 - Identity Protection PIN, See:   
- **: See: Publication 5477, All taxpayers now eligible for Identity Protection PINs    
- **: [IP-PIN video](https://www.youtube.com/watch?v=YhfSZuwGrlY)  
- **: [How to get IP-PIN](https://www.irs.gov/identity-theft-fraud-scams get-an-identity-protection-pin)  
- **: [IP PIN TOOL](https://www.irs.gov/ippin)  
+  -  See: Publication 5477, All taxpayers now eligible for Identity Protection PINs    
+  -  [IP-PIN video](https://www.youtube.com/watch?v=YhfSZuwGrlY)  
+  -  [How to get IP-PIN](https://www.irs.gov/identity-theft-fraud-scams get-an-identity-protection-pin)  
+  -  [IP PIN TOOL](https://www.irs.gov/ippin)  
 
 - Power of attorney (POA)  
- **: Attach Form **8453**  
+  -  Attach Form **8453**  
 
 - Refunds, See:  
- **: Offset against debts**: The IRS may take all or part of your refund to past-due amounts  
- **: For inquiries:  Use App  
+  -  Offset against debts -  The IRS may take all or part of your refund to past-due amounts  
+  -  For inquiries:  Use App  
 
-- Penalities and Interest**: Interest is charged from the due date of your return, even if you get an extension.  Penalities (failure-to-file penalty) is ~5% for each month or part of a month that it is late, but not more 25%.  
+- Penalities and Interest -  Interest is charged from the due date of your return, even if you get an extension.  Penalities (failure-to-file penalty) is ~5% for each month or part of a month that it is late, but not more 25%.  
 
 
 <script> function buttonvita() { window.open("www.IRS.gov/VITA"); } </script>
@@ -433,24 +433,24 @@ layout: post
 |![Table 1.5](/irs.ea/assets/images/images.pub.17/table.1.5.png)|
 
 - LATE Filing    
- **: Penalities and Interest**: Interest is charged from the due date of your return, even if you get an extension.  Penalities (failure-to-file penalty) is ~5% for each month or part of a month that it is late, but not more 25%.  
+  -  Penalities and Interest -  Interest is charged from the due date of your return, even if you get an extension.  Penalities (failure-to-file penalty) is ~5% for each month or part of a month that it is late, but not more 25%.  
 
 - Filing for a decedent  
- **: See **Pub. 559**: Survivors, Executors and Administrators   
+  -  See **Pub. 559 -  Survivors, Executors and Administrators   
 
 - Extensions of Time To File, Automatic Extension  
- **: **Form 4868**: Application for Automatic Extension of Time to File U.S. Individual Income Tax Return  
- **: **Extensions $\geq$ 2 month, Use:6 months**  
+  -  **Form 4868 -  Application for Automatic Extension of Time to File U.S. Individual Income Tax Return  
+  -  **Extensions $\geq$ 2 month, Use:6 months**  
 
 - For Non-resident alien  
- **: If you earned in the US, then 4/15   
- **: If you don't earn wages subject to W/H, then 6/15. **????**  
+  -  If you earned in the US, then 4/15   
+  -  If you don't earn wages subject to W/H, then 6/15. **????**  
 
 - Qualified hospitalization
- **: Any **hospitalization outside** the US (eg. military)  
- **: **Up to 5 years in the US**  
- **: See: See Pub. 3, **Armed Forces' Tax Guide**  
- **: Included in medical expenses amounts are the cost of inpatient care if you are there for treatment, this includes for meals and lodging.  
+  -  Any **hospitalization outside** the US (eg. military)  
+  -  **Up to 5 years in the US**  
+  -  See: See Pub. 3, **Armed Forces' Tax Guide**  
+  -  Included in medical expenses amounts are the cost of inpatient care if you are there for treatment, this includes for meals and lodging.  
 
 
 <hr class="red">
@@ -469,13 +469,13 @@ layout: post
 <hr class="red">
 
 - Substiture forms  
- **: In general, you cannot yuse your forms  
- **: BUT se also Pub. **1167**, General Rules and Specifications for Substitute Tax Forms and Schedules  
+  -  In general, you cannot yuse your forms  
+  -  BUT se also Pub. **1167**, General Rules and Specifications for Substitute Tax Forms and Schedules  
 
 <hr class="red">
 
 - Where Do I File?
- **: [EFILE](https://www.irs.gov/irs-free-file-do-your-taxes-for-free)
+  -  [EFILE](https://www.irs.gov/irs-free-file-do-your-taxes-for-free)
 
 <hr class="red">
 
@@ -509,35 +509,35 @@ Your accounting method is how you record income and expenses. Most people use ei
 
 2.1 What's New & Reminders
 
- **: Filing status rules
+  -  Filing status rules
 
- **: Tax benefits for married taxpayers
+  -  Tax benefits for married taxpayers
 
 - Filing Status Categories
 
- **: Single
+  -  Single
 
- **: Married Filing Jointly
+  -  Married Filing Jointly
 
- **: Married Filing Separately
+  -  Married Filing Separately
 
- **: Head of Household
+  -  Head of Household
 
- **: Qualifying Surviving Spouse
+  -  Qualifying Surviving Spouse
 
 ## 3. Dependents
 
 ### What's New
 
- **: Child & Dependent Care Credit
+  -  Child & Dependent Care Credit
 
 ### Reminders
 
- **: Dependent Rules
+  -  Dependent Rules
 
 ### Introduction
 
- **: Who Can Claim a Dependent?
+  -  Who Can Claim a Dependent?
 
 ##### Qualifying Child
 
@@ -547,17 +547,17 @@ Your accounting method is how you record income and expenses. Most people use ei
 
 - What's New
 
- **: Changes in Tax Withholding
+  -  Changes in Tax Withholding
 
 -  Reminders
 
- **: Estimated Tax Payments
+  -  Estimated Tax Payments
 
- **: Changes in Taxable Income
+  -  Changes in Taxable Income
 
 -  Introduction
 
- **: Understanding Tax Withholding
+  -  Understanding Tax Withholding
 
 -  W-4 Forms
 
@@ -569,63 +569,63 @@ Your accounting method is how you record income and expenses. Most people use ei
  <button onclick="buttonPubs()">Open: irs-pubs</button> 
  
 TOTAL
-- **Pub. 5**: Your Appeal Rights and How to Prepare a Protest if You Don't Agree
-- **Publication 216**: Conference and Practice Requirements
-- **Pub. 225**: Farmer’s Tax Guide
-- **Pub. 463**: Travel, Gift, and Car Expenses
-- **Pub. 501**: Dependents, Standard Deduction
-- **Pub. 502**: Medical and Dental Expenses
-- **Pub. 503**: Child and Dependent Care Expenses
-- **Pub. 504**: Divorced or Separated Individuals
-- **Pub. 505**: Tax Withholding and Estimated Tax
-- **Pub. 519**: Tax Guide for Aliens
-- **Pub. 523**: Selling Your Home
-- **Pub. 524**: Credit for the Elderly or the Disabled
-- **Pub. 526**: Charitable Contributions
-- **Pub. 527**: Residential Rental Property (Including Rental of Vacation Homes)
-- **Pub. 531**: Reporting Tip Income
-- **Pub. 534**: Depreciating Property Placed in Service Before 1987
-- **Pub. 535**: Business Expenses
-- **Pub. 547**: Casualties, Disasters, and Thefts
-- **Pub. 551**: Basis of Assets
-- **Pub. 555**: Community Property
-- **Pub. 556**: Examination of Returns, Appeal Rights, and Claims for Refund
-- **Pub. 561**: Determining the Value of Donated Property
-- **Pub. 570**: Tax Guide for Individuals With Income from U.S. Possessions
-- **Pub. 575**: Pension and Annuity Income
-- **Pub. 590-A**: Contributions to Individual Retirement Arrangements (IRAs)
-- **Pub. 590-B**: Distributions from Individual Retirement Arrangements (IRAs)
-- **Pub. 596**: Earned Income Credit (EIC)
-- **Pub. 936**: Home Mortgage Interest Deduction
-- **Pub. 966**: Electronic Federal Tax Payment System (EFTPS)
-- **Pub. 970**: Tax Benefits for Education
-- **Pub. 971**: Innocent Spouse Relief
-- **Pub. 1546**: The Taxpayer Advocate Service is Your Voice at the IRS
-- **Pub. 4134**: Low Income Taxpayer Clinic List
-- **Pub. 5250**: Pay by Cash
+- **Pub. 5 -  Your Appeal Rights and How to Prepare a Protest if You Don't Agree
+- **Publication 216 -  Conference and Practice Requirements
+- **Pub. 225 -  Farmer’s Tax Guide
+- **Pub. 463 -  Travel, Gift, and Car Expenses
+- **Pub. 501 -  Dependents, Standard Deduction
+- **Pub. 502 -  Medical and Dental Expenses
+- **Pub. 503 -  Child and Dependent Care Expenses
+- **Pub. 504 -  Divorced or Separated Individuals
+- **Pub. 505 -  Tax Withholding and Estimated Tax
+- **Pub. 519 -  Tax Guide for Aliens
+- **Pub. 523 -  Selling Your Home
+- **Pub. 524 -  Credit for the Elderly or the Disabled
+- **Pub. 526 -  Charitable Contributions
+- **Pub. 527 -  Residential Rental Property (Including Rental of Vacation Homes)
+- **Pub. 531 -  Reporting Tip Income
+- **Pub. 534 -  Depreciating Property Placed in Service Before 1987
+- **Pub. 535 -  Business Expenses
+- **Pub. 547 -  Casualties, Disasters, and Thefts
+- **Pub. 551 -  Basis of Assets
+- **Pub. 555 -  Community Property
+- **Pub. 556 -  Examination of Returns, Appeal Rights, and Claims for Refund
+- **Pub. 561 -  Determining the Value of Donated Property
+- **Pub. 570 -  Tax Guide for Individuals With Income from U.S. Possessions
+- **Pub. 575 -  Pension and Annuity Income
+- **Pub. 590-A -  Contributions to Individual Retirement Arrangements (IRAs)
+- **Pub. 590-B -  Distributions from Individual Retirement Arrangements (IRAs)
+- **Pub. 596 -  Earned Income Credit (EIC)
+- **Pub. 936 -  Home Mortgage Interest Deduction
+- **Pub. 966 -  Electronic Federal Tax Payment System (EFTPS)
+- **Pub. 970 -  Tax Benefits for Education
+- **Pub. 971 -  Innocent Spouse Relief
+- **Pub. 1546 -  The Taxpayer Advocate Service is Your Voice at the IRS
+- **Pub. 4134 -  Low Income Taxpayer Clinic List
+- **Pub. 5250 -  Pay by Cash
 
-- **Form W-4**: Employee’s W/H Certificate
-- **Form W-4V**: Voluntary W/H Request
-- **Form 706**: United States Estate (and Generation-Skipping Transfer) Tax Return
-- **Form 709**: United States Gift (and Generation-Skipping Transfer) Tax Return
-- **Form 1040X**: Amended U.S. Individual Income Tax Return
-- **Form 1040-ES**: Estimated Tax for Individuals
-- **Form 1041**: U.S. Income Tax Return for Estates and Trusts
-- **Form 843**: Claim for Refund and Request for Abatement
-- **Form 1099C**: Cancellation of Debt
-- **Form 1099R**: Distributions From Pensions, Annuities, Retirement or Profit-Sharing Plans, IRAs, Insurance Contracts, etc.
-- **Form 1116**: Foreign Tax Credit
-- **Form 1127**: Application for Extension of Time for Payment of Tax Due to Undue Hardship
-- **Form 2210**: Underpayment of Estimated Tax by Individuals, Estates, & Trusts
-- **Form 2555**: Foreign Earned Income Exclusion
-- **Form 2848**: Power of Attorney and Declaration of Representative
-- **Form 3520**: Annual Return to Report Transactions with Foreign Trusts and Receipt of Certain Foreign Gifts
-- **Form 5471**: Information Return of U.S. Persons with Respect to Certain Foreign Corporations
-- **Form 8606**: Nondeductible IRAs
-- **Form 8453**: U.S. Individual Income Tax Transmittal for an IRS e-file Return
-- **Form 8821**: Tax Information Authorization
-- **Form 8822**: Change of Address
-- **Form 8865**: Return of U.S. Persons With Respect to Certain Foreign Partnerships
-- **Form 8879**: IRS e-file Signature Authorization
-- **Form 8938**: Statement of Specified Foreign Financial Assets
-- **Form 12153**: Request for a Collection Due Process or Equivalent Hearing
+- **Form W-4 -  Employee’s W/H Certificate
+- **Form W-4V -  Voluntary W/H Request
+- **Form 706 -  United States Estate (and Generation-Skipping Transfer) Tax Return
+- **Form 709 -  United States Gift (and Generation-Skipping Transfer) Tax Return
+- **Form 1040X -  Amended U.S. Individual Income Tax Return
+- **Form 1040-ES -  Estimated Tax for Individuals
+- **Form 1041 -  U.S. Income Tax Return for Estates and Trusts
+- **Form 843 -  Claim for Refund and Request for Abatement
+- **Form 1099C -  Cancellation of Debt
+- **Form 1099R -  Distributions From Pensions, Annuities, Retirement or Profit-Sharing Plans, IRAs, Insurance Contracts, etc.
+- **Form 1116 -  Foreign Tax Credit
+- **Form 1127 -  Application for Extension of Time for Payment of Tax Due to Undue Hardship
+- **Form 2210 -  Underpayment of Estimated Tax by Individuals, Estates, & Trusts
+- **Form 2555 -  Foreign Earned Income Exclusion
+- **Form 2848 -  Power of Attorney and Declaration of Representative
+- **Form 3520 -  Annual Return to Report Transactions with Foreign Trusts and Receipt of Certain Foreign Gifts
+- **Form 5471 -  Information Return of U.S. Persons with Respect to Certain Foreign Corporations
+- **Form 8606 -  Nondeductible IRAs
+- **Form 8453 -  U.S. Individual Income Tax Transmittal for an IRS e-file Return
+- **Form 8821 -  Tax Information Authorization
+- **Form 8822 -  Change of Address
+- **Form 8865 -  Return of U.S. Persons With Respect to Certain Foreign Partnerships
+- **Form 8879 -  IRS e-file Signature Authorization
+- **Form 8938 -  Statement of Specified Foreign Financial Assets
+- **Form 12153 -  Request for a Collection Due Process or Equivalent Hearing
