added yaml to 1.pdf2table.md

--- a/_pages/1.pdf2table.md
+++ b/_pages/1.pdf2table.md
@@ -1,3 +1,8 @@
+---
+layout: post
+title: IRS Docs And Title Table
+--- 
+
 |Document No.|Title|
 |---|---|
 |1|<a href="f1040es.pdf" download>           2024 Form 1040-ES</a>|
